_build/_log
### Starting build.
# Target: src/ftest.ml.depends, tags: { extension:ml, file:src/ftest.ml, include, ocaml, ocamldep, quiet, traverse }
ocamldep.opt -modules src/ftest.ml > src/ftest.ml.depends # cached
# Target: src/ford_fulkerson.mli.depends, tags: { extension:mli, file:src/ford_fulkerson.mli, include, ocaml, ocamldep, quiet, traverse }
ocamldep.opt -modules src/ford_fulkerson.mli > src/ford_fulkerson.mli.depends # cached
# Target: src/graph.mli.depends, tags: { extension:mli, file:src/graph.mli, include, ocaml, ocamldep, quiet, traverse }
ocamldep.opt -modules src/graph.mli > src/graph.mli.depends # cached
# Target: src/graph.cmi, tags: { byte, compile, extension:mli, file:src/graph.mli, include, interf, ocaml, quiet, traverse }
ocamlc.opt -c -I src -I src/tool_fichiers -o src/graph.cmi src/graph.mli # cached
# Target: src/ford_fulkerson.cmi, tags: { byte, compile, extension:mli, file:src/ford_fulkerson.mli, include, interf, ocaml, quiet, traverse }
ocamlc.opt -c -I src -I src/tool_fichiers -o src/ford_fulkerson.cmi src/ford_fulkerson.mli # cached
# Target: src/gfile.mli.depends, tags: { extension:mli, file:src/gfile.mli, include, ocaml, ocamldep, quiet, traverse }
ocamldep.opt -modules src/gfile.mli > src/gfile.mli.depends # cached
# Target: src/gfile.cmi, tags: { byte, compile, extension:mli, file:src/gfile.mli, include, interf, ocaml, quiet, traverse }
ocamlc.opt -c -I src -I src/tool_fichiers -o src/gfile.cmi src/gfile.mli # cached
# Target: src/tools.mli.depends, tags: { extension:mli, file:src/tools.mli, include, ocaml, ocamldep, quiet, traverse }
ocamldep.opt -modules src/tools.mli > src/tools.mli.depends # cached
# Target: src/tools.cmi, tags: { byte, compile, extension:mli, file:src/tools.mli, include, interf, ocaml, quiet, traverse }
ocamlc.opt -c -I src -I src/tool_fichiers -o src/tools.cmi src/tools.mli # cached
# Target: src/ftest.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:src/ftest.cmo, file:src/ftest.ml, implem, include, ocaml, quiet, traverse }
ocamlc.opt -c -I src -I src/tool_fichiers -o src/ftest.cmo src/ftest.ml # cached
# Target: src/ford_fulkerson.ml.depends, tags: { extension:ml, file:src/ford_fulkerson.ml, include, ocaml, ocamldep, quiet, traverse }
ocamldep.opt -modules src/ford_fulkerson.ml > src/ford_fulkerson.ml.depends
+ ocamldep.opt -modules src/ford_fulkerson.ml > src/ford_fulkerson.ml.depends
File "src/ford_fulkerson.ml", line 255, characters 12-13:
255 |             | id :: rest -> if current_cost = (maj_cout gr liste_cout iter id) 
                  ^
Error: Syntax error
Command exited with code 2.
# Compilation unsuccessful.
